--- a/src/signin.html
+++ b/src/signin.html
@@ -23,7 +23,7 @@
             <header class="content__navbar">
                 @@include('assets/parts/back.html')
                 <div class="content__login">
-                    <span class="content__signed">Not a member yet?</span> <a href="/">join now</a>
+                    <span class="content__signed">Not a member yet?</span> <a href="/mob/">join now</a>
                 </div>
             </header>
             <div class="content__membership">
