--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <header class="content__navbar">
                 @@include('assets/parts/back.html')
                 <div class="content__login">
-                    <span class="content__signed">Already a Member?</span> <a href="/mob/signin.html">log in now</a>
+                    <span class="content__signed">Already a Member?</span> <a href="/mob/dist/signin.html">log in now</a>
                 </div>
             </header>
             <div class="content__membership">
