--- a/src/index.html
+++ b/src/index.html
@@ -20,16 +20,19 @@
             <header class="content__navbar">
                 @@include('assets/parts/back.html')
                 <div class="content__login">
-                    <span class="content__signed">Already a Member?</span> <a href="/mob/dist/signin.html">log in now</a>
+                    <span class="content__signed">Already a Member?</span> <a href="/mob/dist/signin.html" id="login">log in now</a>
                 </div>
             </header>
             <div class="content__membership">
                 <h2 class="content__title">Become an exclusive member</h2>
                 <p class="content__subtitle">Sign up and join the partnership</p>
-                <form class="content__form">
-                    <div class="content__input">
-                        <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-                        <input type="text" placeholder="Your name">
+                <form class="content__form" id="form">
+                    <div class="content__field" id="name-field">
+                        <div class="content__input">
+                            <input type="text" placeholder="Your name" id="name">
+                            <svg enable-background="new 0 0 52 52" id="Layer_1" version="1.1" viewBox="0 0 52 52"><g><path d="M49.4656715,41.2599487l-20.25-34.4099731C28.5256691,5.6900024,27.3256569,5,25.9956398,5   c-1.3200073,0-2.5299683,0.6900024-3.2099609,1.8499756l-20.25,34.4099731   c-0.710022,1.2000122-0.7200317,2.6400146-0.0300293,3.8500366C3.1856432,46.289978,4.3956652,47,5.7456408,47h40.5100098   c1.3499756,0,2.5599976-0.710022,3.2299805-1.8900146C50.1856422,43.8999634,50.1756325,42.4599609,49.4656715,41.2599487z    M23.9363747,19.8552856h3.3808594v3.1870117l-0.7246094,8.9189453H24.660984l-0.7246094-8.9189453V19.8552856z    M26.9065895,37.1985474c-0.3540039,0.3623047-0.7768555,0.5439453-1.2675781,0.5439453   c-0.4912109,0-0.9140625-0.1816406-1.2680664-0.5439453c-0.3544922-0.3623047-0.53125-0.7939453-0.53125-1.296875   c0-0.5019531,0.1767578-0.9345703,0.53125-1.296875c0.3540039-0.3623047,0.7768555-0.5439453,1.2680664-0.5439453   c0.4907227,0,0.9135742,0.1816406,1.2675781,0.5439453s0.53125,0.7949219,0.53125,1.296875   C27.4378395,36.4046021,27.2605934,36.8362427,26.9065895,37.1985474z"/></g></svg>
+                        </div>
+                        <p class="content__error" ></p>
                     </div>
                     @@include('assets/parts/inputs.html')
                     @@include('assets/parts/button.html')
