fonts, modal content width

--- a/src/assets/parts/modal.html
+++ b/src/assets/parts/modal.html
@@ -36,9 +36,10 @@
                     and the email address registered to that username in the fields.</p>
             </div>
             <div class="modal__item">
-                <h4 class="modal__title">How do I unlock my account?</h4>
-                <p class="modal__text">All you need to do is reset your password. Make sure to enter both your username
-                    and the email address registered to that username in the fields.</p>
+                <h4 class="modal__title">Why did you lock my account?</h4>
+                <p class="modal__text">Reddit is constantly working to keep your accounts safe and secure. Our security
+                    teams monitor many sources looking for potential threats. We also understand that frequent travel
+                    and VPN use are common and these factors are taken into consideration. </p>
             </div>
         </div>
     </div>
